重构了导航栏

--- a/app/src/main/res/layout/fragment_admin_login.xml
+++ b/app/src/main/res/layout/fragment_admin_login.xml
@@ -5,14 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".fragment.AdminLoginFragment">
 
-    <!--<com.google.android.material.appbar.AppBarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-    <!--</com.google.android.material.appbar.AppBarLayout>-->
-
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,13 +27,25 @@
 
         </RelativeLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/admin_mapview_icon"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"/>
 
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="38dp"
             android:layout_marginRight="38dp"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="80dp"
             android:orientation="vertical">
 
 
