--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:id="@+id/fragment_container">
 
-    <com.example.huangshan.CustomVideoView
+    <com.example.huangshan.view.CustomVideoView
         android:id="@+id/login_video_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
