--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="tab_array">
-        <item>首页</item>
-        <item>社区</item>
-        <item>求助</item>
-        <item>我</item>
+        <item>数据</item>
+        <item>预测</item>
+        <item>通知</item>
+        <item>账户</item>
     </string-array>
 </resources>
