初步完成 我 的界面的绘制，还未连接数据库

--- a/app/src/main/res/layout/fragment_main_showdata.xml
+++ b/app/src/main/res/layout/fragment_main_showdata.xml
@@ -18,4 +18,11 @@
         android:text="管理员分景点展示"
         android:textSize="25dp"/>
 
+    <Button
+        android:id="@+id/login_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="登录测试"
+        android:textSize="25dp"/>
+
 </LinearLayout>
