--- a/app/src/main/res/layout/activity_list_admins.xml
+++ b/app/src/main/res/layout/activity_list_admins.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.AdminsMapViewActivity">
-    
+    android:orientation="vertical"
+    tools:context=".activity.ListAdminsActivity">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/admins_map_view_back_btn"
+            android:id="@+id/admins_list_back_btn"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@mipmap/icon_back_black"
@@ -26,22 +26,18 @@
             android:layout_gravity="center"
             android:text="管理员导览"
             android:textSize="20dp" />
-        <TextView
-            android:id="@+id/show_admin_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="显示列表"
-            android:textSize="15dp"
-            android:textColor="#42ACFF"
-            android:layout_gravity="center|right"
-            android:layout_marginRight="10dp"/>
     </FrameLayout>
 
-    <com.amap.api.maps.MapView
-        android:id="@+id/admins_map_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </com.amap.api.maps.MapView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/admin_list_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </LinearLayout>
 
 </LinearLayout>
