zhang first_commit

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="white">#ffffff</color>
     <color name="greens">#09B3C5</color>
     <color name="login_blue">#03A9F4</color>
+    <color name="search_bar">#eee</color>
+    <color name="searchBar_cursor">#bbb</color>
+    <color name="red">#FF3B00</color>
+    <color name="red_press">#990000</color>
+    <color name="dark_gray">#4C535B</color>
+    <color name="dark_gray_press">#ff7e8a97</color>
 </resources>
