--- a/app/src/main/res/layout/layout_adminmap_pop.xml
+++ b/app/src/main/res/layout/layout_adminmap_pop.xml
@@ -33,9 +33,9 @@
                     app:cardCornerRadius="8dp">
                     <ImageView
                         android:id="@+id/admin_head_icon"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@mipmap/admins" />
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                         />
                 </androidx.cardview.widget.CardView>
                 <LinearLayout
                     android:layout_width="wrap_content"
