--- a/app/src/main/res/layout/notification_send_item.xml
+++ b/app/src/main/res/layout/notification_send_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.example.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
     <LinearLayout
         android:tag="Bottom2"
@@ -62,4 +62,4 @@
         </RelativeLayout>
 
     </LinearLayout>
-</com.example.swipe.SwipeLayout>
+</com.daimajia.swipe.SwipeLayout>
