初步完成日客流和小时客流的图表展示

--- a/app/src/main/res/layout/fragment_main_showdata.xml
+++ b/app/src/main/res/layout/fragment_main_showdata.xml
@@ -1,28 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-  <Button
-      android:id="@+id/weather"
+  <androidx.core.widget.NestedScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <LinearLayout
+          android:orientation="vertical"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_margin="10dp">
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/showdata_line_chart"
+            android:layout_width="match_parent"
+            android:layout_height="250dp">
+        </com.github.mikephil.charting.charts.LineChart>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/darker_gray" />
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/showdata_bar_chart"
+            android:layout_width="match_parent"
+            android:layout_height="350dp">
+
+        </com.github.mikephil.charting.charts.BarChart>
+
+      </LinearLayout>
+  </androidx.core.widget.NestedScrollView>
+
+  <com.nightonke.boommenu.BoomMenuButton
+      android:id="@+id/showdata_boommenubtn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="天气测试"
-      android:textSize="25dp"/>
+      android:layout_alignParentBottom="true"
+      android:layout_alignParentRight="true"
+      android:layout_alignParentEnd="true"
+      app:bmb_autoHide="false"
+      app:bmb_buttonEnum="ham"
+      app:bmb_buttonPlaceEnum="buttonPlace_ham_1"
+      app:bmb_piecePlaceEnum="piecePlace_ham_1" />
 
-  <Button
-      android:id="@+id/admins_map_view_btn"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="管理员分景点展示"
-      android:textSize="25dp"/>
 
-  <Button
-      android:id="@+id/login_test"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="登录测试"
-      android:textSize="25dp"/>
 
-</LinearLayout>
+</RelativeLayout>
