--- a/app/src/main/res/layout/fragment_main_accountmanage.xml
+++ b/app/src/main/res/layout/fragment_main_accountmanage.xml
@@ -34,6 +34,60 @@
         app:cardElevation="1dp"
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true">
+      <LinearLayout
+          android:id="@+id/admin_self_ll_root1"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:background="@android:color/white"
+          android:gravity="center_vertical"
+          android:orientation="horizontal"
+          android:paddingBottom="10dp"
+          android:paddingLeft="10dp"
+          android:paddingRight="10dp"
+          android:paddingTop="10dp">
+
+        <!--item左边的Icon-->
+        <ImageView
+            android:id="@+id/admin_self_left_icon"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@mipmap/lookover_admin_info"/>
+
+        <!--item中间部分的文字-->
+        <TextView
+            android:id="@+id/admin_self_text_content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_weight="1"
+            android:textSize="16sp"
+            android:text="个人信息"/>
+
+        <!--item右边的文字-->
+        <TextView
+            android:id="@+id/admin_self_right_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp" />
+
+        <!--item右边的Icon 默认是向右的箭头-->
+        <ImageView
+            android:id="@+id/admin_self_right_icon"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@mipmap/homepage_right_arrow" />
+      </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="1dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true">
 
       <LinearLayout
           android:layout_width="match_parent"
