--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,9 @@
     <color name="dark_gray">#4C535B</color>
     <color name="dark_gray_press">#ff7e8a97</color>
     <color name="divider_line">#F0F0F0</color>
+
+    <color name="warning">#FF6767</color>
+    <color name="tips">#ffffbb33</color>
+    <color name="free_count">#58D664</color>
+
 </resources>
